# apps/backend/openapi/openapi-admin.json
@@ -525,12 +525,6 @@
           "currencyCode": {
             "type": "string"
           },
-          "shippingAddressId": {
-            "type": ["string", "null"]
-          },
-          "billingAddressId": {
-            "type": ["string", "null"]
-          },
           "canceledAt": {
             "type": ["string", "null"],
             "format": "date-time"
@@ -556,8 +550,6 @@
           "email",
           "customerId",
           "currencyCode",
-          "shippingAddressId",
-          "billingAddressId",
           "canceledAt",
           "createdAt",
           "updatedAt",
